--- a/tools/releaseschedule/mainclass.ui
+++ b/tools/releaseschedule/mainclass.ui
@@ -355,11 +355,22 @@
      </layout>
     </item>
     <item>
-     <widget class="QPushButton" name="generateButton">
-      <property name="text">
-       <string>Generate</string>
-      </property>
-     </widget>
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <widget class="QPushButton" name="generateButton">
+        <property name="text">
+         <string>Generate techbase format</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="icalButton">
+        <property name="text">
+         <string>Generate iCal format</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </item>
     <item>
      <widget class="QTextEdit" name="schedule"/>
